# dynamic_rlslp

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen.yaml
examples/: query.tsv  short.txt
examples/log/: short.rr.fa.c.json  short.rr.fa.j.json  short.rr.fa.r.json  short.se.st.c.json  short.se.st.j.json  short.se.st.r.json
experiment/: all.sh  index_memory.sh  online_build.sh
include/: all.hpp  dynamic_rlslp_string.hpp  dynamic_string.hpp  json_helper.hpp  temporary_set_for_cache_update.hpp
include/commands/: line_query.hpp  query_results.hpp  tsv_parser.hpp
include/dynamic_dictionary/: common_sequence_compiler.hpp  compress.hpp  dynamic_grammar_for_layered_rlslp.hpp  shrink_and_pow.hpp  split_and_concatenation.hpp  try_shrink_and_pow.hpp
include/dynamic_dictionary/parent_query/: fast_parent_dictionary.hpp  many_parents_manager.hpp  node_occurrence_query.hpp  occurrence_pointer.hpp  parent_vector_manager.hpp
include/dynamic_rlslp/: dynamic_grammar_for_layered_rlslp.hpp
include/dynamic_rlslp/parent_query/: fast_parent_dictionary.hpp  naive_parent_query.hpp  node_occurrence_query.hpp  occurrence_node.hpp
include/local_parsings/: locally_consistent_parsing.hpp  mu.hpp  naive_parsing.hpp
include/rlslp/: derivation_tree_visualizer.hpp  dictionary_for_layered_rlslp.hpp  grammar_for_layered_rlslp.hpp  nonterminal_less_comparer.hpp  random_bit_dictionary.hpp  rlslp_rule_body.hpp  rlslp_rule_info.hpp  run_rule_body.hpp  run_rule_vector.hpp  short_string.hpp  signature_functions.hpp  static_rlslp.hpp
include/rlslp/components/: dictionary_for_layered_rlslp.hpp  random_bit_dictionary.hpp
include/rlslp/helper/: derivation_tree_visualizer.hpp  nonterminal_less_comparer.hpp
include/rlslp/rules/: all.hpp  nonterminal_functions.hpp  rlslp_rule_body.hpp  rlslp_rule_info.hpp  run_rule_body.hpp  signature_functions.hpp
include/rlslp/static_operations/: access.hpp  all.hpp  fast_common_sequence_builder.hpp  fast_lce.hpp  (+3 more)
include/static_operations/: access.hpp  fast_common_sequence_builder.hpp  fast_lce.hpp  level_sequence_function.hpp
include/types/: types.hpp
include/updates/: all.hpp  common_sequence_compiler.hpp  compress.hpp  shrink_and_pow.hpp  split_and_concatenation.hpp  try_common_sequence_compiler.hpp  try_shrink_and_pow.hpp
main/: build_int64_main.cpp  build_main.cpp  decompress_main.cpp  demo_main.cpp  print_main.cpp  query_main.cpp
test/: CMakeLists.txt  run_all_tests.sh  test_dynamic_string_access.cpp  test_dynamic_string_access_int64.cpp  test_dynamic_string_constructor.cpp  test_dynamic_string_constructor_int64.cpp  test_dynamic_string_delete.cpp  test_dynamic_string_delete_int64.cpp  test_dynamic_string_file_io.cpp  test_dynamic_string_get_all_occurrences.cpp  test_dynamic_string_insert.cpp  test_dynamic_string_insert_int64.cpp  test_dynamic_string_int64_common.hpp  test_dynamic_string_lce.cpp  test_dynamic_string_lcp.cpp  test_dynamic_string_lcs.cpp  test_dynamic_string_random_ops.cpp  test_dynamic_string_reverse_lce.cpp
(+5 files in other folders)
